wiki-frontend/src/Styles/wikipage.css
.wiki-navbar{
    width: 100%;
    /* height: 3vh; */
    background-color: grey;
    display: block;
}

.wiki-page-container{
    display: flex;
    height: 100%;
}

@media (max-width: 768px) {
    .wikipage-component {
        min-height: 75vh;
        max-height: 79vh
    }
}


.wikipage-component{
    padding: 0.1vh 1.5em 1.5em 1.5em;
    width: 100%;
    min-width: 45%;
    /* max-width: 50%; */
    overflow-wrap: break-word;
}

.wikipage-component img{
    max-width: 20rem;
}

.article-editor{
    padding: 1.25em 1.5em 1.5em 1.5em;
    width: 100%;
}

.home-component{
    padding: 0em 1.5em 1.5em 1.5em;
}

.wiki-navbar-button{
    filter: brightness(90%);
    white-space: normal;
    vertical-align: middle;
    overflow: hidden;
    text-decoration: none;
    text-align: center;
    cursor: pointer;
    border: none;
    height: 3vh;
}

.wiki-navbar-button:hover{
    filter: brightness(80%);
}

.wiki-navbar-button-active{
    filter: brightness(60%);
}

.wikipage-content-container{
    white-space: normal;
    word-wrap: break-word;
}

.wikipage-comment{
    display: flex;
    margin-bottom: 1em;
    width: 100%;
}

.wikipage-comment-profilepic{
    margin-right: 10px;
}

.wikipage-comment-profilepic img{
    width: 64px;
    height: 64px;
    border: 1px solid black;
    border-radius: 5px;
    object-fit: cover;
}

.wikipage-reply{
    display: flex;
    align-items: center; /* Vertically center align items */
    margin-bottom: 1em; /* Adjust margin as needed */
    /* margin-left: 1em; */
}

.wikipage-reply-profile {
    margin-right: 0.1em; /* Adjust margin as needed */
}

.wikipage-reply-content {
    flex: 1; /* Takes remaining width */
}

.profilepage-profilepic img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    height: 300px;
    width: 300px;
    position: relative;
    max-height: 100%;
    max-width: 100%;
}

.wikipage-comment-content{
    overflow: hidden;
}

.wikipage-comment-data p{
    font-size: 14px;
    margin: 0px;
}

.wikipage-comment-data p a{
    color: black;
    text-decoration: none;
}

.wikipage-comment-text p{
    margin: 0;
    font-size: 14px;
    text-align: justify;
}

.wikipage-hidden {
    display: none;
}

.comment-write-container{
    display: flex;
}

.comment-write-textarea {
    margin-left: 10px;
    width: 100%;
}

.comment-write-container .comment-write-textarea textarea {
    outline: none;
    width: calc(100% - 5px);
    resize: vertical;
    max-height: 400px;
    min-height: 60px;
    border-radius: 5px;
    border: 1px solid;
}

.comment-write-counter {
    text-align: right;
    margin: 0;
    font-size: 12px;
    font-weight: bold;
}

.comment-button {
    display: flex;
    /* background: none; */
    color: black;
    border: none;
    outline: none;
    margin: auto;
    margin-top: -10px;
    margin-bottom: 10px;
}

.comment-button:disabled, .comment-button:hover:disabled {
    filter: grayscale(1) !IMPORTANT;
    cursor: default;
}

@media (max-width: 768px) {
    .wikipage-comment-profilepic img {
        width: 2em;
        height: 2em;
    }
    .btn-center {
        font-size: 16px;
    }
}

.btn-left {
    width: 13px;
    height: 26px;
    /* background-image: url(../img/button_left.png); */
    display: inline-block;
}

.btn-center {
    /* background-image: url(../img/button_center.png); */
    /* color: white; */
    font-family: 'pixel_title';
    text-decoration: none;
    height: 26px;
    line-height: 26px;
    font-size: 20px;
    padding-left: 5px;
    padding-right: 5px;
    width: max-content;
}
.btn-right {
    width: 13px;
    height: 26px;
    /* background-image: url(../img/button_right.png); */
    display: inline-block;
}

